--- a/gb/20/3/4/n11913236.md
+++ b/gb/20/3/4/n11913236.md
@@ -1,52 +1,54 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qabgnz254/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qabgnz254/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qabgnz254/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qabgnz254/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qabgnz254/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qabgnz254/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qabgnz254/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qabgnz254/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qabgnz254/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qabgnz254/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qabgnz254/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qabgnz254/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qabgnz254/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qabgnz254/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qabgnz254/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qabgnz254/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/qabgnz254/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/qabgnz254/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qabgnz254/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qabgnz254/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qabgnz254/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/osgirb392/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/osgirb392/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/osgirb392/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/osgirb392/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/osgirb392/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/osgirb392/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/osgirb392/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/osgirb392/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/osgirb392/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/osgirb392/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/osgirb392/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/osgirb392/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/osgirb392/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>香港预算案满意净值急跌41个百分点</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2020年03月04日讯】<a href="https://github.com/qabgnz254/djy/blob/master/gb/tag/%E9%A6%99%E6%B8%AF.md">香港</a>民意研究计划3日公布，2020年度财政<a href="https://github.com/qabgnz254/djy/blob/master/gb/tag/%E9%A2%84%E7%AE%97%E6%A1%88.md">预算案</a>首轮跟进调查结果，<a href="https://github.com/qabgnz254/djy/blob/master/gb/tag/%E6%BB%A1%E6%84%8F.md">满意</a><a href="https://github.com/qabgnz254/djy/blob/master/gb/tag/%E5%87%80%E5%80%BC.md">净值</a>急剧下跌41个百分点至负22个百分点，而满意度评分亦<a href="https://github.com/qabgnz254/djy/blob/master/gb/tag/%E6%80%A5%E8%B7%8C.md">急跌</a>13.9分至40.2分，创2008年有纪录以来新低。</p>
-<p>财政司司长在上周三（2月26日）公布新一年财政<a href="https://github.com/qabgnz254/djy/blob/master/gb/tag/%E9%A2%84%E7%AE%97%E6%A1%88.md">预算案</a>，<a href="https://github.com/qabgnz254/djy/blob/master/gb/tag/%E9%A6%99%E6%B8%AF.md">香港</a>民研在当天进行即时调查，市民的即时反应属于正面，<a href="https://github.com/qabgnz254/djy/blob/master/gb/tag/%E6%BB%A1%E6%84%8F.md">满意</a><a href="https://github.com/qabgnz254/djy/blob/master/gb/tag/%E5%87%80%E5%80%BC.md">净值</a>为正19个百分点，评分为54.1分。</p>
-<p>香港民研在2月27至28日进行首轮跟进调查，访问512名香港居民。结果显示，经过传媒一两天的报道后，市民的反应转为负面。市民对预算案的满意率下跌18个百分点至28%，不满意率增加23个百分点至50%，满意净值急剧下跌41个百分点至负22个百分点。评分由54.1分，<a href="https://github.com/qabgnz254/djy/blob/master/gb/tag/%E6%80%A5%E8%B7%8C.md">急跌</a>13.9分至40.2分，创2008年有纪录以来新低。</p>
+	<p>【大纪元2020年03月04日讯】<ahref="https://github.com/osgirb392/djy/blob/master/gb/tag/%E9%A6%99%E6%B8%AF.md#1">香港</a>民意研究计划3日公布，2020年度财政<ahref="https://github.com/osgirb392/djy/blob/master/gb/tag/%E9%A2%84%E7%AE%97%E6%A1%88.md#1">预算案</a>首轮跟进调查结果，<ahref="https://github.com/osgirb392/djy/blob/master/gb/tag/%E6%BB%A1%E6%84%8F.md#1">满意</a><ahref="https://github.com/osgirb392/djy/blob/master/gb/tag/%E5%87%80%E5%80%BC.md#1">净值</a>急剧下跌41个百分点至负22个百分点，而满意度评分亦<ahref="https://github.com/osgirb392/djy/blob/master/gb/tag/%E6%80%A5%E8%B7%8C.md#1">急跌</a>13.9分至40.2分，创2008年有纪录以来新低。</p>
+<p>财政司司长在上周三（2月26日）公布新一年财政<ahref="https://github.com/osgirb392/djy/blob/master/gb/tag/%E9%A2%84%E7%AE%97%E6%A1%88.md#1">预算案</a>，<ahref="https://github.com/osgirb392/djy/blob/master/gb/tag/%E9%A6%99%E6%B8%AF.md#1">香港</a>民研在当天进行即时调查，市民的即时反应属于正面，<ahref="https://github.com/osgirb392/djy/blob/master/gb/tag/%E6%BB%A1%E6%84%8F.md#1">满意</a><ahref="https://github.com/osgirb392/djy/blob/master/gb/tag/%E5%87%80%E5%80%BC.md#1">净值</a>为正19个百分点，评分为54.1分。</p>
+<p>香港民研在2月27至28日进行首轮跟进调查，访问512名香港居民。结果显示，经过传媒一两天的报道后，市民的反应转为负面。市民对预算案的满意率下跌18个百分点至28%，不满意率增加23个百分点至50%，满意净值急剧下跌41个百分点至负22个百分点。评分由54.1分，<ahref="https://github.com/osgirb392/djy/blob/master/gb/tag/%E6%80%A5%E8%B7%8C.md#1">急跌</a>13.9分至40.2分，创2008年有纪录以来新低。</p>
 <p>香港民意研究所名誉总监钟剑华认为，评分下跌的主要原因在于预算案大幅增加了警队的拨款，批评政府“派钱不会收买到人心”。他又促请正视社会问题根源，认真对待往后的两份财政预算案及施政报告，以挽回民望。</p>
 <p>另外，支持和反对立法会通过预算案的市民各占39%。20%被访市民满意政府的理财策略，下跌4个百分点，60%表示不满，增加5个百分点。满意净值下跌9个百分点，至负40个百分点，创2003年以来新低。52%认为香港的税制公平，35%认为不公平者。只有24%认为香港财富分配的情形合理，67%认为不合理。◇</p>
-
+	
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/3/4/n11913236.htm">香港预算案满意净值急跌41个百分点</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/3/3/n11910730.htm">香港反送中四成被捕者为学生</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/2/n11910011.htm">【珍言真语】佘继泉：港府预算案搔不着痒处</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/29/n11904225.htm">【十字路口】港警逮捕黎智英等人 有五大算计？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/28/n11901746.htm">香港政党抗议医管局 对罢工医护秋后算账</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/28/n11901705.htm">【楼市动向】利用扩阔税基完善调控措施</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/28/n11901672.htm">陈茂波拒全民派钱分开审议</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/27/n11901448.htm">【珍言真语】李兆富：留存现金 应对失业潮</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/27/n11898813.htm">香港民主派批预算案大增警队开支</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/24/n11890652.htm">【更新】疫情扩散75国及地区 中共假数据曝光</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/2/n11909414.htm">陆媒三炮齐发 揭中共卫健委隐瞒疫情</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/3/n11910939.htm">【拍案惊奇】陈秋实生死谜 中共买防弹衣玄机</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/3/n11910876.htm">【世事关心】川普亲信：实验室是病毒来源之一</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/28/n11902923.htm">犹太拉比谈武汉肺炎：弥赛亚现身前十灾重演</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/2/n11908043.htm">子丑之年江边起──预言中的“大瘟疫”</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869303.htm">肺炎瘟疫《推背图》56象之卦如何解出路？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11877987.htm">为何一地蝗虫灾 一地凤凰来？天人感应不虚</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/2/n11910313.htm">蝗虫大军恐袭击西藏云南 中共发紧急通知</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/2/n11909713.htm">组图：台湾最美“黄金隧道” 风铃花盛开</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/1/n11907805.htm">新冠病毒来自美国？多位专家驳斥阴谋论</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/2/n11907932.htm">【十字路口】中共移植肺脏治新冠病患 四大疑点</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/3/n11910939.htm">【拍案惊奇】陈秋实生死谜 中共买防弹衣玄机</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/3/n11910762.htm">【十字路口】连续换肺抗病毒 中共再曝活摘产业链</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/3/n11911910.htm">刘真装心室辅助器 医生判断：最多撑3个月</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/1/n11907045.htm">宋慧乔、IU等自米兰时装周返韩 恐陷感染危机</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/1/n11907574.htm">港人纪念8.31事件被抓 杜汶泽黄秋生斥黑警</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/2/n11910094.htm">赞公主邮轮船长暖举 魔术师陈日昇：帅到爆</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/2/n11909319.htm">被辛龙收当干妹 严立婷盼嫂子刘真渡过难关</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/20/2/27/n11898813.md#1">香港民主派批预算案大增警队开支</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/20/2/27/n11901448.md#1">【珍言真语】李兆富：留存现金 应对失业潮</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/20/2/28/n11901672.md#1">陈茂波拒全民派钱分开审议</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/20/2/28/n11901705.md#1">【楼市动向】利用扩阔税基完善调控措施</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/qabgnz254/djy/blob/master/gb/20/3/4/n11913236.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qabgnz254/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qabgnz254/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qabgnz254/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/13/n11042647.md#1" target="_blank">林辉：咏春拳文革遭遇是武林劫难的缩影</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977767.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(3) 骑向自由</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/22/n12767168.md#1">辛丑八卦2021年两岸国运</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/19/n12762219.md#1">解密文件：美CIA或观察到火星上的古代人类</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/20/12/30/n12653772.md#1">【命理】相士算他活不过30岁 为何不应验？</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/21/n12765804.md#1">预言中的大瘟疫和中国变局</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/18/3/8/n10200680.md#1">【西游义趣】之二：一个信念贯穿沙僧的前世今生</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/24/n12772629.md#1">【财商天下】习点赞航天股价大跌 二十大开战？</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/25/n12773369.md#1">【远见快评】如何建美式极权？左派给惊人答案</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/25/n12774955.md#1">【新闻大家谈】两暗桩 美国会警长曝悲剧内幕</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12768556.md#1">被拍到与冯绍峰游三亚 赵丽颖高情商称呼婆婆</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12770385.md#1">北京纪念华国锋百年冥诞 习近平为何不出席</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12768678.md#1">忧江泽民死后遭清算 博裕资本部分迁往新加坡</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12768556.md#1">被拍到与冯绍峰游三亚 赵丽颖高情商称呼婆婆</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/22/n12768344.md#1">吴孟达确诊罹患肝癌 手术后没力气说话</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12769489.md#1">林志玲夫妇首度合体代言 AKIRA全程中文应答</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12769457.md#1">Janet速产二胎不到3小时“来不及打无痛分娩”</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12769225.md#1">演艺圈收入骤减 贺一航之子曾治豪到餐厅实习</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12769229.md#1">俄罗斯奇特的自然景观──“贝加尔湖禅”</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12768699.md#1">缺乏维生素D易感染新冠 1招补充最快</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/19/n12762302.md#1">偏头痛有哪些前兆？有时像中风 掌握1方法防发作</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12770063.md#1">春天是轻松减肥和排毒的绝佳时机</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/osgirb392/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/osgirb392/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/3/4/n11913236.htm">香港预算案满意净值急跌41个百分点</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/osgirb392/djy/blob/master/gb/20/3/4/n11913236.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/osgirb392/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/osgirb392/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/osgirb392/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
