--- a/gb/nf5775.md
+++ b/gb/nf5775.md
@@ -47,11 +47,9 @@
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/9/24/n12428360.md#1" target="_blank">沈舟：中共仿造前苏联航母到底什么水平</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/9/24/n12428360.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2017/07/b83a5093a67c7718bb56b54e1e093315-150x120.jpg" align ="left"></a>中共目前拥有的2艘航母中，1艘是前苏联未完工的瓦格良号航母，被改装成了辽宁号，另1艘山东号又是辽宁号的仿制品。中共不但购买的瓦格良号船体，后来还从乌克兰买到了全套图纸。那么中共模仿的前苏联航母，到底什么水平呢？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年09月25日 9:38 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/9/15/n12406276.md#1" target="_blank">中印边境冲突 中共官媒吹捧航模战机秀实力</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/9/15/n12406276.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/09/946445efe386b93fc54f7f6feae6a5f1-150x120.jpg" align ="left"></a>中共军方缺乏透明度，令官媒传播的军事虚假信息充斥网路。正值中印边境冲突之际，《人民日报》推特账号发布了一段中共战机展示“眼镜蛇动作”的视频，被中外网民嘲讽为虚假宣传。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年09月16日 2:16 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/9/10/n12395139.md#1" target="_blank">【新闻看点】党媒呛台扬言开战 中共能挡美军？</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/9/10/n12395139.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/09/download-30-150x120.jpg" align ="left"></a>前不久我们做了一期军事内容，介绍了美国的航母打击群，也包括大黄蜂、鹰眼等战机的情况。之后有一位朋友来信，大概意思是，相信美国的军力。但是如果中共发动攻击，美国介入会不会受阻呢？他提到了中共的A2/AD防御战力。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年09月11日 10:10 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/9/6/n12384458.md#1" target="_blank">边境冲突升级 中共防长要印度勿公开负面信息</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/9/6/n12384458.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2017/10/20171008-nina-Taipei-301-150x120.jpg" align ="left"></a>在中印边境6月份爆发45年来最大流血冲突后，近日中印双方再次发生军事纠纷。据报，印方取得局部胜利后，藏人挥舞“雪山狮子旗”在边境载歌载舞的影片被广泛流传。不过，中共国防部长近日在会晤印度防长时要求印方不要传播“负面信息”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年09月06日 11:28 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/9/4/n12381182.md#1" target="_blank">台湾国防部曝共军舰队首度接近夏威夷</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/9/4/n12381182.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/08/southChinasea-150x120.jpg" align ="left"></a>美中军事对峙正处于激烈状态之际，日媒引述台湾国防部一份不公开的中共军力年度报告指，中共南海舰队今年初穿越第二岛链，首度接近包含夏威夷在内的第三岛链区域并在附近演习。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年09月05日 3:37 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/9/1/n12373539.md#1" target="_blank">中共黄海渤海接连军演 航母露面引猜测</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/9/1/n12373539.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/12/6caac0d024d804f1d488d9e9c5cb7ad4-150x120.jpg" align ="left"></a>美中两国军事对抗加剧后，中共军方又开始了新一波的军演，除在黄海进行实弹演习外，还出动首艘国产航母山东舰在渤海军演。分析认为，中共航母选择在内海军演，就是担心美军侦察机再次前来侦察。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年09月02日 6:37 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/8/28/n12365106.md#1" target="_blank">【新闻看点】中共发导弹美舰进西沙 抗美有本钱？</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/8/28/n12365106.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/08/download-81-150x120.jpg" align ="left"></a>在中共发射4枚导弹后，昨天（27日）美国国防部对中共进行了谴责，同时派出了导弹驱逐舰“马斯廷”号（USS Mustin）闯入了西沙海域。中共还能接着怼吗？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年08月29日 9:32 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/8/26/n12359708.md#1" target="_blank">【新闻看点】中共南海射导弹 美防长回应习近平</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/8/26/n12359708.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2005/06/5062254481124-150x120.jpg" align ="left"></a>美中关系恶化正在步步升级，从经济延伸到意识形态，如今军事领域的对抗也越来越严重。继昨天（25日）中共称美军侦察机飞入实弹演习区后，今天再指控美军侦察机飞入了南海上空。由于中共军方正在军演，中共称这是“蓄意挑衅”，并在今天向南海发射了2枚中程导弹。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年08月27日 8:51 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/8/20/n12344332.md#1" target="_blank">【拍案惊奇】传大陆征战时医院 福建运大量飞弹</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/8/20/n12344332.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/08/download-1-2-150x120.jpg" align ="left"></a>18日这一天，美军和台湾方面还纷纷证实，美国第七舰队的“阿利?伯克级”导弹驱逐舰“马斯廷”号（USS Mustin），在台湾海峡自北向南航行，高调穿过台湾海峡，而且是在台海中线以西，也就是中国大陆的海上专属经济区一侧航行。随后第七舰队还在脸书上公布了相关的照片。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年08月20日 12:42 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/12/19/n12632208.md#1" target="_blank">习近平晋升4上将 泄漏中共军中多个秘密</a><br></h3>12月18日，中共总书记、军委主席习近平晋升了4名上将。
 
@@ -60,6 +58,8 @@
 大纪元记者注意到，习近平晋升4名上将，泄漏了中共军方的“多个秘密”。
 首先，获晋升的4名上将的新职务，都是首次披露。
 郭普校2017年任中部战区副政委兼空军政委.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月20日 2:12 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/9/6/n12384458.md#1" target="_blank">边境冲突升级 中共防长要印度勿公开负面信息</a><br></h3>在中印边境6月份爆发45年来最大流血冲突后，近日中印双方再次发生军事纠纷。据报，印方取得局部胜利后，藏人挥舞“雪山狮子旗”在边境载歌载舞的影片被广泛流传。不过，中共国防部长近日在会晤印度防长时要求印方不要传播“负面信息”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年09月06日 11:28 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/8/29/n12365626.md#1" target="_blank">【翻墙必看】中共军方学者偷美机密机场被抓</a><br></h3>中共向南海发射东风中程导弹，正中美军下怀，成为中共军事应对的一大败笔。中共过早掀开了底牌，暴露了军事实力，更激怒了周边国家。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年08月29日 5:47 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/8/26/n12359708.md#1" target="_blank">【新闻看点】中共南海射导弹 美防长回应习近平</a><br></h3>美中关系恶化正在步步升级，从经济延伸到意识形态，如今军事领域的对抗也越来越严重。继昨天（25日）中共称美军侦察机飞入实弹演习区后，今天再指控美军侦察机飞入了南海上空。由于中共军方正在军演，中共称这是“蓄意挑衅”，并在今天向南海发射了2枚中程导弹。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年08月27日 8:51 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5775.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5775_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5775_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5775_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5775_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5775_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5775_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5775_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5775_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5775_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5775_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/yrsmsb310/djy/blob/master/gb/nf5775.md#1<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5775.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yrsmsb310/djy/blob/master/gb/nf5775.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf5775.htm">https://www.epochtimes.com/gb/nf5775.htm</a>    （国内需<a href="https://github.com/yrsmsb310/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
